--- a/escritos-volumen-1/updated/04-capitulo-3.adoc
+++ b/escritos-volumen-1/updated/04-capitulo-3.adoc
@@ -1,5 +1,5 @@
 [#ch3, short="Algunos Principios que Guían Hacia Afuera de la Apostasía"]
-== Capítulo III. Algunos Principios que Guían Hacia Afuera de la Apostasía y que Introducen en el Verdadero Espíritu y Vida Cristiana
+== Capítulo III. Algunos Principios que Sacan de la Apostasía e Introducen en el Verdadero Espíritu y Vida Cristiana
 
 [.numbered-group]
 ====
@@ -64,18 +64,18 @@ que no necesitan que alguien les enseñe.
 De la ley viene el conocimiento de Dios y la ley ahora está en el corazón.
 De la ley en el corazón mana el verdadero conocimiento de Dios,
 tanto en el menor como en el mayor que están dentro de ese pacto.
-Ellos no necesitan decirse unos a otros '`conoce
-al Señor;`' esta es la condición del nuevo pacto,
+Ellos no necesitan decirse unos a otros "`conoce
+al Señor;`" esta es la condición del nuevo pacto,
 al que los cristianos entraron los primeros días de la iglesia (1 Juan 2:27). Sin embargo,
-esto es algo desconocido en esta noche oscura de apostasía y sigue siéndolo para muchos.
+esto es algo desconocido en esta noche oscura de apostasía, y sigue siéndolo para muchos.
 "`Todos me conocerán, desde el menor hasta el mayor.`"
 Noten:
 Incluso el más pequeño en este pacto tiene la ley tan escrita en
 su corazón que no necesita buscar conocimiento en ningún otro lugar.
 
 [.numbered]
-__4. Solo el Espíritu de Dios puede escribir el pacto en el corazón,
-o solo Cristo escribe el pacto por medio de su Espíritu.__
+__4. Sólo el Espíritu de Dios puede escribir el pacto en el corazón,
+o sólo Cristo escribe el pacto por medio de su Espíritu.__
 
 El hombre con toda su sabiduría no puede lograr esto;
 fue expulsado de Dios y no puede encontrar el camino de regreso
@@ -86,7 +86,7 @@ tiene que ver con prestar oído a la verdadera voz del verdadero Espíritu.
 Está escrito en los profetas con respecto a los hijos de este pacto,
 que todos serían enseñados por Dios:
 "`Y todos tus hijos serán enseñados por el Señor.`" Sólo el Señor mediante su Espíritu
-puede enseñarles a venir a Cristo y a recibir de Cristo el nuevo pacto en sus corazones.
+puede enseñarles a venir a Cristo y a recibir de Cristo en sus corazones el nuevo pacto.
 El hombre es incapaz de conocer a Cristo o de recibir Su pacto
 hasta que el Espíritu lo haya preparado y enseñado (Juan 14:17),
 luego, cuando el Espíritu ha preparado el corazón,
@@ -106,15 +106,15 @@ y no hay entrada al pacto sino por el Espíritu.
 Por lo tanto,
 lo primero que es absolutamente necesario conocer en la religión es al Espíritu de Dios,
 es decir,
-es absolutamente necesario conocer Sus escritos o al menos Sus movimientos en el corazón.
+es absolutamente necesario conocer Sus escritos, o al menos Sus movimientos en el corazón.
 
 Todo lo que es aceptable para Dios en la religión fluye del Espíritu.
 Todo conocimiento tiene que proceder de Él,
-porque sólo Él ha revelado y puede revelar la verdad
+porque sólo Él ha revelado y puede revelar la verdad,
 y fue nombrado por Cristo para guiar a toda verdad.
 Toda adoración tiene que ser ofrecida en Él,
 porque los que adoran al Padre tienen que adorarlo en Espíritu y en verdad,
-porque el Padre busca que tales adoradores lo adoren y rechaza a los demás
+porque el Padre busca que tales adoradores lo adoren, y rechaza a los demás
 adoradores y su adoración. La oración tiene que ser siempre en el Espíritu.
 (Efes.
 6:18; Jud.
@@ -142,11 +142,11 @@ la obra por medio de la que Él se abre camino hacia la escritura de Su ley en e
 Cuando Cristo prometió al Consolador, al Espíritu de verdad, dijo con respecto a Él,
 "`...convencerá al mundo de pecado`" (Juan 16:8). Ahora bien,
 aquellos que han sido creados de nuevo en Cristo y se han
-vuelto sus discípulos reciben _consuelo_ del Espíritu,
+vuelto sus discípulos, reciben _consuelo_ del Espíritu,
 pero, ¿qué es el Espíritu para el mundo incrédulo?
 O,
 ¿cómo podrían ellos sentir alguna operación de Él? Él es para ellos un convencedor
-de pecado y lo sienten frenándolos y convenciéndolos de sus pecados.
+de pecado y Lo sienten frenándolos y convenciéndolos de sus pecados.
 En consecuencia,
 el gran objetivo para el hombre mientras permanece en la
 oscuridad (que cuando sea trasladado a la luz será fácil),
@@ -158,7 +158,7 @@ Que eso que descubre lo que es espiritualmente maligno, debe ser por obligación
 espiritualmente bueno.
 O, que eso que revela lo que es indudablemente puro e inclina el corazón a ello,
 debe ser de Dios.
-Conocer esto, y ser unido a ello, resulta en la unión de la criatura con Dios.
+Conocer esto, y ser unido a ello, da como resultado la unión de la criatura con Dios.
 Este es el verdadero comienzo de la vida eterna.
 
 [.numbered]
@@ -219,7 +219,7 @@ __8. Esta luz que convence de pecado brilla en cada consciencia.__
 (Juan 1:4). Cristo es "`la luz del mundo`" (Juan 8:12). Dios,
 porque amó al mundo, manifestó Su amor al mundo enviando Su luz a él,
 para "`alumbrar a todo hombre que viene al mundo`" (Juan
-1:9) y para que con la luz pudieran ver a Su Hijo.
+1:9), y para que con la luz pudieran ver a Su Hijo.
 "`Y a todos los que le recibieron, les dio el poder de ser hechos hijos de Dios.`"
 Como Dios desea que "`todos los hombres sean salvos y lleguen al
 conocimiento de la verdad,`" les ha dado a todos esa luz,
@@ -270,7 +270,7 @@ Este es, de hecho,
 un camino recto y angosto en el que la carne no puede entrar ni caminar.
 Y sin embargo, es el único camino, pues no hay vida en Dios, ni paz para con Dios,
 mientras el enemigo viva en el corazón. Pero cuando
-se recibe la luz y el hombre se vuelve a ella,
+se recibe la luz, y el hombre se vuelve a ella,
 el poder empieza a obrar, y mata al enemigo en el corazón; y habiéndolo hecho,
 cesa la guerra y sólo hay paz.
 Luego, la verdadera paz que sobrepasa el entendimiento llena y refresca el corazón.
@@ -286,7 +286,7 @@ une y abre el manantial de nuevo.
 Dios es luz, Él habita en la luz y en ella se goza plenitud de vida.
 Él da una medida de Su propia luz para sacar de las tinieblas,
 y el que cree y la sigue es conducido por ella a Dios,
-de quien salió. Al salir de las tinieblas y entrar en Dios
+de quien salió. Al salir de las tinieblas y entrar en Dios,
 el alma empieza a sentir de nuevo el manantial de vida,
 el fresco manantial de vida que está en Él. El que cree ha llegado al pozo de la salvación,
 del que saca agua viva y toma continuamente para no tener sed.
@@ -300,7 +300,7 @@ al oír o recibir nuevos conceptos o percepciones de las cosas,
 sino al experimentar "`eso`" que le puso fin a todos
 los conceptos y percepciones de la criatura.
 Nosotros crecemos en Él por el incremento de "`eso`" en nosotros, es decir,
-por el incremento de la Semilla a quien se le hizo la promesa,
+por el incremento de la Semilla a quien se le hizo la promesa;
 la Semilla que era antes de que Abraham fuese, es sentida, es conocida,
 Su día es visto y disfrutado, y por la luz del mismo,
 las tinieblas son descubiertas y el reino de las tinieblas asaltado.
@@ -315,7 +315,7 @@ Nosotros ya conocíamos la religión antes de que esto surgiera y vamos a seguir
 
 [.discourse-part]
 Respuesta:
-Es efectivamente nuevo para los que han permanecido mucho
+En efecto, esto es nuevo para los que han permanecido mucho
 tiempo en la apostasía y han establecido otra luz,
 pero no es nuevo en sí mismo, es el mismo que estaba en el principio; sí,
 es el mismo que estaba incluso antes del principio.
@@ -341,7 +341,7 @@ de tinieblas y muerte y no ha conocido la luz de la vida.
 
 [.discourse-part]
 __Objeción 2:__
-Esta es una luz natural o la luz de la naturaleza y consciencia del viejo Adán.
+Esta es una luz natural, o la luz de la naturaleza y consciencia del viejo Adán.
 
 [.discourse-part]
 Respuesta: En cierto sentido es una luz natural,
@@ -410,7 +410,7 @@ Es lo mismo con las Escrituras.
 Unos dicen que este es el significado, otros dicen que no, que es este otro.
 Ellos permiten que sus propios razonamientos e imaginaciones se suelten,
 y no hay fundamento de la certeza.
-Pero si esperaran al Espíritu para comenzar y continuaran
+Pero si esperaran al Espíritu para comenzar, y continuaran
 sin ir más lejos de lo que Él les revela,
 todas las dudas y divisiones serían sofocadas.
 
@@ -524,20 +524,20 @@ entonces la sabiduría y el poder de Dios llegarán a ser naturales.
 [.numbered]
 __2. Mantengan el sentido, el sentimiento y la experiencia,
 y tengan cuidado con el entendimiento, la imaginación y el pensamiento de la mente.
-La mente no es útil para Dios,
-ni lleva fruto para Dios hasta que sea hecha nuevamente y sea nuevamente moldeada.__
+La mente es inútil para Dios,
+y no lleva fruto para Dios hasta que sea hecha nuevamente y sea nuevamente moldeada.__
 
 La única Semilla de vida yace en el invisible hombre interior
 del corazón entre una multitud de semillas de muerte,
 todas las cuales tienen su crecimiento y su fuerza en la parte natural corrupta.
 Por tanto,
-esa Semilla de vida no puede dispararse en la criatura sin que
-las otras semillas se disparen con ella y procuren ahogarla.
+esa Semilla de vida no puede brotar en la criatura sin que
+las otras semillas broten con ella y procuren ahogarla.
 Ahora bien, las otras semillas brotan de dos maneras:
 Ya sea en forma de oposición contra la verdadera Semilla, o en forma de semejanza.
-No puede entrar un buen pensamiento,
-deseo o haz de luz en el entendimiento o la voluntad,
-sin que haya y broten una multitud de malos pensamientos,
+No puede brotar un buen pensamiento,
+deseo o haz de luz en el entendimiento o en la voluntad,
+sin que broten una multitud de malos pensamientos,
 deseos o razonamientos carnales contra dicha luz y traten de vencerla.
 Pero si después de tal asalto el enemigo es largamente vencido
 (por el poder de Dios que pelea contra él y lo derrota),
@@ -549,7 +549,7 @@ y que fácilmente pasan por buenos si el alma no mantiene una estrecha vigilanci
 La única seguridad está en mantenerse fuera de lo natural,
 de lo que el enemigo posee y de donde radica su fuerza,
 y mantenerse en el sentido y sentimiento de la Semilla invisible,
-y sólo involucrarse con Él en lo natural, en ese sentido y sentimiento.
+e involucrarse con Él en lo natural, sólo en ese sentido y sentimiento.
 Cuando Él venga, vendrá con fuerza,
 vendrá sobre la fuerza que tiene el enemigo en lo natural y gradualmente
 lo conquistará. De ninguna manera descansen o permanezcan en lo natural,
@@ -586,7 +586,7 @@ Ahora, mientras esperan tomen la cruz y manténganse en la experiencia de la Sem
 así la parte corrupta, natural y mortal,
 en donde el trono y el poder de Satanás han estado, se marchitará,
 decaerá y se debilitará día a día. Igualmente, la tierna planta de Dios,
-la Semilla inmortal, se disparará y se fortalecerá cada día,
+la Semilla inmortal, brotará y se fortalecerá cada día,
 y ustedes llegarán a una nueva voluntad en Dios y a un nuevo entendimiento en Dios.
 Aquello que es de Dios se manifestará y ustedes conocerán,
 desearán y se deleitarán en las cosas de Dios.
@@ -600,14 +600,14 @@ el temor que conserva el corazón limpio,
 la esperanza que ancla el alma inmortal en el Dios inmortal,
 la paciencia que gana la corona.
 Llegarán a ser testigos de las diversas condiciones de los
-santos en la escritura conforme crecen en ellas.
+santos en las Escrituras conforme crecen en ellas.
 Ustedes no necesitarán que los hombres les den los significados
 de las Escrituras que provienen de sus cerebros,
 habilidades y entendimientos adquiridos,
 ustedes conocerán el significado proveniente de la cosa misma en sus propios corazones.
 Oirán las palabras de la viva voz del Espíritu que habló primero las Escrituras,
 el único capaz de interpretar Su propia mente y revelar las palabras que Él mismo dijo.
-Entonces ustedes conocerán y amarán la verdadera vida,
+Entonces conocerán y amarán la verdadera vida,
 y no necesitarán más exhortaciones para salir de todas las formas muertas,
 corruptas y corruptoras que siempre han sido y serán enemigas de la vida.
 Así la paz de Dios, el reposo de Dios, el verdadero día de reposo de Dios,
