Capitalization of Semilla

--- a/escritos-volumen-1/updated/03-capitulo-2.adoc
+++ b/escritos-volumen-1/updated/03-capitulo-2.adoc
@@ -907,7 +907,7 @@ que puede hacer que un corazón tierno sangre al leerlo,
 y que se situará como una señal de infamia en la magistratura
 y ministerio de Inglaterra para sucesivas generaciones.
 
-¿Es este el amor de la semilla justa o es el amor de Caín,
+¿Es este el amor de la Semilla justa o es el amor de Caín,
 el cual es una mera confesión en palabra y demostración, pero no en hecho, ni en verdad?
 ¿Cómo pueden tales hombres amar a Dios?
 No, si el verdadero amor de Dios estuviera en ellos esta enemistad no podría existir,
@@ -1037,8 +1037,8 @@ tal como sucede con la levadura.
 Cristo es formado por la fe en el corazón y según crece esta Semilla,
 según se propaga esta Levadura, según crece este Hombre,
 así hace santa a la persona en quien Él crece.
-La semilla de la vida, el reino de los cielos,
-es algo santo y según crece y se extiende purga la vieja levadura y hace nueva la masa.
+La Semilla de la vida, el reino de los cielos,
+es algo santo, y según crece y se extiende purga la vieja levadura y hace nueva la masa.
 Pero ahora, los cristianos que han crecido en la apostasía,
 desconocen esta Semilla y no disciernen esta Levadura,
 por lo que su santidad consiste en conformarse a reglas de las Escrituras
@@ -1174,7 +1174,7 @@ Han habido cambios de una cosa u otra, pero no se ha conocido una verdadera rest
 
 Sin embargo,
 a lo largo de todas las edades y generaciones Dios ha reservado
-una simiente para Él. Con dicha semilla hizo que surgiera un remanente
+una Semilla para Él. Con dicha Semilla hizo que surgiera un remanente
 al que movía y llevaba a testificar contra estas corrupciones,
 y tan pronto como la bestia los derribaba y mataba, Dios levantaba más.
 
