More IP v2 c15 fixes

--- a/escritos-volumen-2/updated/15-capitulo-15.adoc
+++ b/escritos-volumen-2/updated/15-capitulo-15.adoc
@@ -2645,7 +2645,7 @@ Para un Destinatario Desconocido
 [.salutation]
 Amigo,
 
-Al ver que no orar en mi familia según las costumbre de los profesantes,
+Al ver que no orar en mi familia según las costumbres de los profesantes,
 se ha convertido en un gran tropiezo para ti,
 brotó en mi corazón darte una explicación al respecto.
 
@@ -2668,7 +2668,7 @@ el Señor me ha mostrado que la oración es Su don al niño que Él engendra.
 He visto que la verdadera oración no descansa en la voluntad, tiempo,
 entendimiento o parte afectiva de la criatura,
 sino en el propio engendramiento del Señor,
-en el que Él primero respira sobre el alma y esta respira
+en el que Él primero respira sobre el alma, y esta respira
 de nuevo hacia Él. El Señor obra esto según Su propio placer,
 y no se puede establecer un tiempo específico en el que Él respire o en el que no respire.
 Cuando Él respira, entonces es el tiempo de oración,
