another IP v2 c15 error

--- a/escritos-volumen-2/updated/15-capitulo-15.adoc
+++ b/escritos-volumen-2/updated/15-capitulo-15.adoc
@@ -2718,7 +2718,7 @@ si alguna vez quieren ser restaurados a la verdadera unidad
 con Dios y al verdadero disfrute de Él otra vez.
 Ustedes deben salir del conocimiento y sabiduría que han reunido de las Escrituras,
 y entrar a la experiencia de las cosas ahí escritas,
-según la plazca al Señor abrirlas y revelarlas en el hombre oculto del corazón.
+según le plazca al Señor abrirlas y revelarlas en el hombre oculto del corazón.
 
 Esto es lo que debes esperar del Señor y no jactarte de tu presente estado,
 como si no te hubieras desviado de Él y hecho alianza con otro espíritu que mantiene
