More chap 15 fixes

--- a/escritos-volumen-2/updated/15-capitulo-15.adoc
+++ b/escritos-volumen-2/updated/15-capitulo-15.adoc
@@ -2799,7 +2799,7 @@ le da al corazón ver y en la que el poder de la vida es experimentado.
 Pues ciertamente, cuando el poder puro abrió mi corazón,
 fui enseñado a ver y a poseer el principio y la Semilla de vida,
 y a conocer la forma en que aparece.
-Para que yo pueda fiel y ciertamente testificar que lo que es divino,
+De modo que yo puedo fiel y ciertamente testificar que lo que es divino,
 espiritual y celestial, está más cerca del hombre de lo que es consciente,
 así como también, lo que es terrenal y egoísta.
 
@@ -2880,14 +2880,14 @@ He sido un buscador de Dios y un adorador de Él desde mi infancia,
 según mi mejor entendimiento.
 Y por un tiempo descansé en esa forma llamada Independencia,
 al creer que era el camino del evangelio,
-y tras entrar con mucho temor y búsqueda de Dios.
+y entré en ella con mucho temor y búsqueda de Dios.
 En ese tiempo, el Señor tuvo en cuenta la rectitud y ternura de mi corazón,
 las cuales Él mismo había formado en mí.
 
 Pero, finalmente, la mano del Señor cayó sobre mí,
 rompiéndome en pedazos en lo que se refiere a mi estado interno.
-Por causa de que entonces no tenía conocimiento de nada,
-pero lloraba delante de Él indeciblemente, noche y día,
+La causa de esto, no la entendí entonces,
+pero lloraba delante de Él noche y día,
 y permanecía anhelando y languideciendo en pos de
 Aquel que era el único Amado de mi alma.
 Muchos me compadecían, pero ninguno podía alcanzar mi estado,
@@ -2896,7 +2896,8 @@ Algunos decían que este era un caso único y que sin ninguna duda,
 terminaría con buena voluntad y misericordia del Señor para conmigo.
 Yo me separé de los Independientes con gran amor y ternura;
 ellos esperando mi regreso de nuevo,
-y yo sin saber nada que lo contradijera (porque el amor entre nosotros
+y yo sin saber nada que fuera contrario a sus expectativas (pues el
+amor entre nosotros
 era grande y yo no había dejado entrar ningún prejuicio contra ellos).
 
 Sin embargo, le plació al Señor, después de muchos años,
@@ -2987,7 +2988,8 @@ de hecho, el verdadero nacimiento aprende bajo el yugo.
 Esto es precioso, llegar a sentir eso que le pone límites a la mente natural,
 a la mente que se adelanta e indaga sin la verdadera naturaleza y sentido.
 De hecho, es bueno para dicha mente recibir el yugo y estar limitada por este,
-y permanecer hambrienta; pues el hambre se determinó para esa mente y nacimiento.
+y permanecer hambrienta;
+pues el hambre ha sido decretada sobre esta mente y este nacimiento.
 Está escrito: "`Destruiré la sabiduría de los sabios,
 y desecharé el entendimiento de los entendidos.`"
 Ahora, es precioso y muy necesario que un hombre conozca, discierna y vele en sí mismo,
