more chap 15 fixes

--- a/escritos-volumen-2/updated/15-capitulo-15.adoc
+++ b/escritos-volumen-2/updated/15-capitulo-15.adoc
@@ -3083,7 +3083,7 @@ y conocimiento carnal de las cosas de Dios en lugar de esta,
 el aceite pronto falla.
 Cuando falla el aceite, la lámpara se apaga.
 Y cuando la lámpara o luz se apaga en el candelero, el Señor pronto elimina el candelero.
-Una vez que el candelero es quitado, la mismas personas pueden reunirse a menudo,
+Una vez que el candelero es quitado, las mismas personas pueden reunirse a menudo,
 mantener la forma,
 realizar cosas mencionadas en las Escrituras con respecto a la iglesia,
 y guardar las cosas que llaman instituciones y ordenanzas de la misma,
@@ -3194,7 +3194,7 @@ pretendiendo amarla cuando no eres realmente de ella en cuanto a la consciencia
 y obediencia puras que ella engendra y manifiesta en los corazones y vidas
 de los fieles! ¡Reflexiona correcta y verdaderamente!
 Habría sido mejor para ti nunca haber conocido la verdad,
-ni haber sido dirigido a la Semilla ni al Camino de justicia,
+ni haber sido dirigido a la Semilla, ni al Camino de justicia,
 que después de haber sido dirigido allí,
 alejarte de los mandamientos santos y negarle obediencia al Justo.
 ¡Ojalá el Señor te dé un verdadero sentido y arrepentimiento, si es Su santo placer,
@@ -3249,7 +3249,7 @@ Este mismo espíritu está vivo en muchos que profesan la verdad ahora, quienes,
 por su entendimiento de las palabras de las Escrituras,
 se mantienen alejados de lo que las Escrituras testifican.
 ¿Por qué vino Cristo en la carne y sufrió, sino para unir y reconciliar con Dios?
-¿Cuál es la forma anticristiana de errar de la verdad,
+¿Y cuál es la forma anticristiana de errar de la verdad,
 sino ensalzar la aparición de Cristo en la carne, Sus sufrimientos, resurrección,
 ascensión, etc.,
 en ese espíritu en el que no se experimentan la verdadera unión y reconciliación?
@@ -3325,7 +3325,7 @@ Los edificadores rechazaron la aparición de Cristo en la carne, en los días de
 y los edificadores rechazan de nuevo Su aparición en Espíritu,
 en este día de Su Espíritu.
 ¡Ojalá que cualquiera que entre ellos es tierno, sea consciente de esto!
-Así no atraerían la severidad y dureza de Dios sobre sus cabezas, y si lo hicieran,
+Así no atraerían la severidad y dureza de Dios sobre sus cabezas; y si lo hacen,
 no es motivo de gozo para nosotros, sino de dolor.
 Cualquier cosa que sea de Dios en alguno de ellos, mi corazón no puede evitar reconocerlo.
 Pero muchos toman que es de Dios (ese temor, esa fe, ese amor, esas oraciones,
@@ -3334,7 +3334,7 @@ cuán preciosa es la luz que verdadera y correctamente
 distingue! "`Mis ovejas oyen mi voz.`"
 La voz del Pastor distingue cada engaño y a cada engañador.
 
-Pero mientras dices:
+Pero aunque dices:
 "`Los espíritus deben ser probados por las Escrituras,`"
 he hallado lo contrario en mi experiencia.
 Las Escrituras pueden probar palabras, pero sólo el Espíritu puede probar espíritus.
@@ -3344,7 +3344,7 @@ Los engañadores pueden venir con palabras de las Escrituras,
 pero no pueden venir con el verdadero poder de Dios.
 Por tanto, el apóstol Juan, quien mandó a los creyentes que probaran espíritus,
 les dijo que ellos tenían la unción del Santo y los dirigió a ella.
-1 Juan 2:20, 27 Pero, ¿quién puede juzgar esto,
+1 Juan 2:20, 27. Pero, ¿quién puede juzgar esto,
 sino el que tiene la unción y es enseñado por el
 Señor a probar las cosas por medio de ella?
 Este sabe cómo prueba ella,
@@ -3357,7 +3357,7 @@ cada engaño del enemigo, incluso, la red secretamente extendida.
 
 ¡Espera conocer eso donde el Señor aparece internamente!
 Toma la cruz de nuestro Señor Jesucristo contra todo lo que se opone a Dios,
-para que todo sea crucificado en ti y tu alma viva en la abundancia de vida y paz.
+para que todo sea crucificado en ti, y tu alma viva en la abundancia de vida y paz.
 No te desanimes debido a alguna debilidad o debido a tu edad.
 Tu debilidad no es tu desventaja, sino más bien tu ventaja,
 porque cuanto más débil seas en ti mismo,
